--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
 p {
-    color: red;
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 a:visited {
   color: blue;
 }
 
-
 a:link, a:visited {
-  text-decoration: none;
+    display: inline-block;
+    text-decoration: none;
+    transition: transform 0.2s ease;
+}
+
+a:hover {
+    transform: translateY(-3px);
 }
