--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html {
+  scroll-padding-top: 80px;
+  scroll-behavior: smooth;
+}
+
 body {
     width: 100%;
     height: auto;
@@ -9,13 +14,18 @@ nav{
     height: 80px;
 }
 
-.nav-container {                     
+.nav-container {   
+  position: fixed;
+  top: 0;
+  left: 0;                  
   width: 100%;
   height: 80px;             
   display: flex;
   background-color: white;
   justify-content: space-around;
-  align-items: center;           
+  align-items: center;
+  z-index: 1000;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);           
 }
 
 .logo{
@@ -28,8 +38,23 @@ nav{
     color: lightskyblue;   
 }
 
-.nav-container .nav-bar{
+.nav-bar{
     display: flex;
-    gap: 20px;
+    gap: 20px;   
 }
 
+.link a{
+    text-decoration: none;   /* removing underline */
+    font-weight: 500;        /* how thick the charcters are */
+    color: black;
+    transition: color 0.2s ease; /*color changes smoothly */
+
+}
+
+.link:hover a{
+    color: lightskyblue
+}
+
+section {
+  min-height: 100vh;
+}
