--- a/style.css
+++ b/style.css
@@ -9,11 +9,6 @@ body {
     overflow-x: hidden;
 }
 
-nav{
-    width: 100%;
-    height: 80px;
-}
-
 .nav-container {   
   position: fixed;
   top: 0;
@@ -55,6 +50,11 @@ nav{
     color: lightskyblue
 }
 
+.link a.active {
+    color: lightskyblue;
+}
+
 section {
-  min-height: 100vh;
+    min-height: 100vh;
+    padding: 20px 20px 20px 40px;
 }
