--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body {
     overflow-x: hidden;
 }
 
+nav{
+    width: 100%;
+    height: 80px;
+}
+
 .nav-container {   
   position: fixed;
   top: 0;
@@ -16,8 +21,8 @@ body {
   width: 100%;
   height: 80px;             
   display: flex;
+  justify-content: space-between;
   background-color: white;
-  justify-content: space-around;
   align-items: center;
   z-index: 1000;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);           
@@ -27,6 +32,7 @@ body {
     color: black;
     font-size: 2rem;
     font-weight: bold;
+    padding-left: 20px;
 }
 
 .logo span{
@@ -35,7 +41,15 @@ body {
 
 .nav-bar{
     display: flex;
-    gap: 20px;   
+    gap: 25px;
+    padding-right: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 800px;
+    font-size: 1.1rem;
+}
+
+.nav-bar a{
+    letter-spacing: 1px;
 }
 
 .link a{
@@ -56,5 +70,24 @@ body {
 
 section {
     min-height: 100vh;
-    padding: 20px 20px 20px 40px;
+    padding: 10px 20px 20px 40px;
 }
+
+.socials {
+    display: flex;                
+    gap: 20px;                    
+}
+
+.socials a {
+    display: inline-block;
+    font-size: 28px;
+    color: violet;
+    transition: color 0.3s ease, transform 0.3s ease;
+    cursor: pointer;
+}
+
+.socials a:hover {
+    color: lightskyblue;        
+    transform: translateY(-2px); 
+}
+
