--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
 .nav-bar{
     display: flex;
     padding-right: 50pt;
-    gap: 25px;
+    gap: 30px;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 800px;
     font-size: 1.1rem;
@@ -75,6 +75,7 @@ body {
     position: relative;
     text-decoration: none;
     font-weight: 600;
+    font-size: 1.2rem;
     color: #1f2937;
     transition: color 0.2s ease, transform 0.3s ease;
     display: inline-block;
@@ -109,12 +110,17 @@ body {
 /* general section styling, min-height to fill the screen, padding for spacing*/
 section {
     min-height: 100vh;
-    padding: 10px 20px 20px 40px;
+    padding: 10px 20px 20px 50pt;
 }
 
-/*general font color for headings*/
-h1, h2, h3, h4, h5 {
+h3, h4, h5 {
     color: #1f2937;
+}
+
+h2{
+    color: #1f2937;
+    font-size: 2rem;
+    font-weight: bolder;
 }
 
 /*general font color, size, and line height for paragraphs and list items*/
@@ -124,54 +130,54 @@ p, li {
     line-height: 1.6;
 }
 
+/*about section*/
 .about-container {
-  max-width: 600px;
-  margin: 0 auto;
-  text-align: center;
-  padding: 170px;
+    max-width: 600px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 170px;
 }
 
 .intro-heading {
-  font-size: 3rem;
-  font-weight: 700;
-  font-family: 'Orbitron', sans-serif;
-  color: #1f2937;
-  margin-bottom: 0.5rem;
+    font-size: 3rem;
+    font-weight: 700;
+    font-family: 'Orbitron', sans-serif;
+    color: #1f2937;
+    margin-bottom: 0.5rem;
 }
 
 .intro-heading .typing {
-  background: linear-gradient(to right, #60a5fa, #2563eb);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+    background: linear-gradient(to right, #60a5fa, #2563eb);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .about-text {
     font-size: 1.05rem;
     font-family: 'Inter', sans-serif;
-    text-align: center;
     line-height: 1.7;
     color: #374151;
 }
 
 .about-text a {
-  color: #2563eb;
-  text-decoration: none;
-  font-weight: 600;
-  position: relative;
+    color: #2563eb;
+    text-decoration: none;
+    font-weight: bold;
+    font-style: italic;
+    position: relative;
 }
-
 
 /*set container of the socials section to flex and add gap between items*/
 .socials {
-    display: flex;                
-    gap: 20px;                    
+    padding-top: 50px;
+    text-align: center;                        
 }
-
 
 /*style the social media icons, display inline-block, font size, color, set transition for smoothhover effect, and cursor pointer*/
 .socials a {
-    display: incline-block;
-    font-size: 28px;
+    display: inline-block;
+    margin: 0 10px;
+    font-size: 30px;
     color: indianred;
     transition: color 0.3s ease, transform 0.3s ease;
     cursor: pointer;
@@ -182,3 +188,38 @@ p, li {
     color: #3b82f6;        
     transform: translateY(-2px); 
 }
+
+/*projects section*/
+.projects{
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.projects h3 {
+  margin-bottom: 0;
+}
+
+.projects h3 + p {
+  margin-top: 0;
+}
+
+
+/*experience section*/
+.jobs{
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.jobs span{
+    font-style: italic;
+    font-weight: normal;
+}
+
+.jobs h3 {
+  margin-bottom: 0;
+}
+
+.jobs h3 + p {
+  margin-top: 0;
+}
+
