--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 /*space added so scroll bar dosent cover part of the sections and smooth scrolling to sections*/
 html {
-  scroll-padding-top: 70px;
+  scroll-padding-top: 60px;
   scroll-behavior: smooth;
 }
 
@@ -123,6 +123,10 @@ h2{
     font-weight: bolder;
 }
 
+ul li {
+    margin-bottom: 5px; 
+}
+
 /*general font color, size, and line height for paragraphs and list items*/
 p, li {
     color: #1f2937;
@@ -169,15 +173,16 @@ p, li {
 
 /*set container of the socials section to flex and add gap between items*/
 .socials {
-    padding-top: 50px;
-    text-align: center;                        
+    display: flex;
+    justify-content: center;
+    gap: 15px;                    
 }
 
 /*style the social media icons, display inline-block, font size, color, set transition for smoothhover effect, and cursor pointer*/
 .socials a {
-    display: inline-block;
     margin: 0 10px;
-    font-size: 30px;
+    padding-top: 50px;
+    font-size: 2rem;
     color: indianred;
     transition: color 0.3s ease, transform 0.3s ease;
     cursor: pointer;
@@ -193,6 +198,11 @@ p, li {
 .projects{
     max-width: 800px;
     margin: 0 auto;
+}
+
+.projects span{
+    font-style: italic;
+    font-weight: normal;
 }
 
 .projects h3 {
@@ -223,3 +233,68 @@ p, li {
   margin-top: 0;
 }
 
+/*certifications section*/
+
+.cert {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.cert-img {
+    margin-top: 1rem; 
+}
+
+.cert-img img {
+  width: 100%;
+  max-width: 200px;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
+
+.clickable-cert {
+  cursor: pointer;
+}
+
+/* Modal container */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  padding-top: 60px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.9);
+}
+
+/* The image inside the modal */
+.modal-content {
+  display: block;
+  margin: auto;
+  max-width: 90%;
+  max-height: 80vh;
+  border-radius: 8px;
+  box-shadow: 0 0 20px rgba(0,0,0,0.4);
+}
+
+/* Close button */
+.close {
+  position: absolute;
+  top: 30px;
+  right: 50px;
+  color: white;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.close:hover {
+  color: #ccc;
+}
