--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     width: 100%;
     height: auto;
     overflow-x: hidden;
-    background-color: #e0ecff;     
+    background-color: ##f6f9fc	;     
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -52,7 +52,7 @@ html, body {
     margin: 0 auto;         /* Centers the container */             
     display: flex;
     justify-content: space-between;
-    background: linear-gradient(to bottom, #ffffff, #e0ecff);
+    background: linear-gradient(to bottom, #cedcf3, #f6f9fc);
     color: #1f2937;    
     align-items: center;
     z-index: 1000;
