--- a/style.css
+++ b/style.css
@@ -11,15 +11,13 @@ body {
     width: 100%;
     height: auto;
     overflow-x: hidden;
-    background-color: ##f6f9fc	;     
+    background-color: #f6f9fc;     
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 html, body {
-  height: 100%;
+  padding: 0;
   margin: 0;
-  display: flex;
-  flex-direction: column;
 }
 
 /*style name with font,size,weight,colour, letter spacing, and transition for hover effect*/
@@ -52,7 +50,7 @@ html, body {
     margin: 0 auto;         /* Centers the container */             
     display: flex;
     justify-content: space-between;
-    background: linear-gradient(to bottom, #cedcf3, #f6f9fc);
+    background: #f6f9fc;
     color: #1f2937;    
     align-items: center;
     z-index: 1000;
@@ -222,26 +220,68 @@ p, li {
 
 
 /*experience section*/
-.jobs{
-    max-width: 800px;
+.timeline {
     margin: 0 auto;
+    max-width: 800px;
+    display: grid;
+    grid-template-columns: 1fr 3px 1fr; /*making right and left columns with a 3px middle verticle line*/
 }
 
-.jobs span{
+.timeline__component {
+    margin: 0 20px 20px 20px; /*margin around each component*/
+}
+
+.timeline__component--bg {
+    padding: 1.5em;
+    padding-top: 0;
+    background: rgba(255, 255, 255, 0.2);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+}
+
+
+.timeline__component--bottom {
+    margin-bottom: 0;
+}
+
+.timeline__middle {
+    position: relative;
+    background: #2563eb;
+}
+
+.timeline__point {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%); /* centers the point */
+    width: 15px;
+    height: 15px;
+    background: #2563eb;
+    border-radius: 50%;   /*  makes it a circle */
+}
+
+.timeline__point--bottom {
+    top: initial;
+    bottom: 0;
+}
+
+.timeline__date--right {
+    text-align: right;
+}
+
+.timeline__component--bg span{
     font-style: italic;
     font-weight: normal;
 }
 
-.jobs h3 {
-  margin-bottom: 0;
+.timeline__date--right span, .timeline__date span{
+    background-color: #e0dede;
+    font-style: italic;
+    font-weight: 500;
 }
 
-.jobs h3 + p {
-  margin-top: 0;
-}
 
 /*certifications section*/
-
 .cert {
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -249,7 +289,6 @@ p, li {
     max-width: 1200px;
     margin: 0 auto;
 }
-
 
 .cert-img {
     margin-top: 1rem; 
@@ -262,10 +301,6 @@ p, li {
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     cursor: pointer;
-}
-
-#Certifications{
-    padding-bottom: 0px;
 }
 
 /* Modal container */
@@ -308,6 +343,19 @@ p, li {
     color: #ccc;
 }
 
+#Certifications {
+    padding-bottom: 0;
+    margin-bottom: 0;
+    }
+
+.cert-img {
+    margin-bottom: 0;
+    }
+
+.site-footer {
+    margin-top: 0;
+    }
+
 /* Footer styling */
 .site-footer {
     background-color: #1f2937; /* dark gray-blue */
@@ -323,6 +371,6 @@ p, li {
 }
 
 .footer-content {
-  max-width: 1000px;
-  margin: 0 auto;
+    max-width: 1000px;
+    margin: 0 auto;
 }
