--- a/style.css
+++ b/style.css
@@ -354,19 +354,39 @@ p, li {
 
 /* Footer styling */
 .site-footer {
-    background-color: #1f2937; 
-    color: #f3f4f6;          
-    padding: 1rem 1rem;
+    background-color: #1f2937;
+    padding: 1rem;      
+}
+
+.site-footer p{
+    color: white;
+    font-size: 0.9rem;
+    cursor: default;
+}
+
+.footer{
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+}
+
+.copyright{
+    grid-column: 2;
     text-align: center;
 }
 
-.site-footer p {
-    font-size: 0.7rem;
-    color: inherit;
-    margin: 0;
+.top{
+    grid-column: 3;
+    text-align: right;
 }
 
-.footer-content {
-    max-width: 1000px;
-    margin: 0 auto;
+.top a{
+    text-decoration: underline;
+    color: white;
+    font-size: 0.9rem;
+    display: inline-block;
+    transition: transform 0.5s ease;
+}
+
+.top a:hover{
+    transform: translateY(-2px) scale(1.05);
 }
