--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 /*space added so scroll bar dosent cover part of the sections and smooth scrolling to sections*/
 html {
-  scroll-padding-top: 4vw;
+  scroll-padding-top: 3rem;
   scroll-behavior: smooth;
 }
 
@@ -30,7 +30,7 @@ html, body {
     -webkit-text-fill-color: transparent;
     letter-spacing: 1px;
     display: inline-block;
-    padding-left: 4vw;
+    padding-left: 3rem;
     transition: transform 0.3s ease;
     cursor: default;
 }
@@ -46,14 +46,13 @@ html, body {
     top: 0;
     left: 0;                  
     width: 100%;
-    height: 80px;
+    z-index: 100;
+    height: 4rem;
     margin: 0 auto;         /* Centers the container */             
     display: flex;
     justify-content: space-between;
     background: #f6f9fc;
-    color: #1f2937;    
     align-items: center;
-    z-index: 1000;
     box-shadow: 0 5px 4px rgba(0, 0, 0, 0.1);
 
 }
@@ -62,12 +61,9 @@ html, body {
 /*style nav bar, display flex to align items, gap between items, padding on right, font family, weight, and size*/
 .nav-bar{
     display: flex;
-    padding-right: 4vw;
-    gap: 30px;
+    padding-right: 3rem;
+    gap: 1.5rem;
     font-family: 'Courier New', Courier, monospace;
-    font-weight: 800px;
-    font-size: 1.1rem;
-    
 }
 
 /*adding letter spacing*/
@@ -80,7 +76,7 @@ html, body {
     position: relative;
     text-decoration: none;
     font-weight: 600;
-    font-size: 1.2rem;
+    font-size: 1.2em;
     color: #1f2937;
     transition: color 0.2s ease, transform 0.3s ease;
     display: inline-block;
@@ -90,7 +86,7 @@ html, body {
 .link a:hover,
 .link a.active {
     color: #3b82f6;
-    transform: translateY(-2px) scale(1.10); 
+    transform: translateY(-2px) scale(1.05); 
 }
 
 /*active link effect, changes color and adds a line below it*/
@@ -115,7 +111,8 @@ html, body {
 /* general section styling, min-height to fill the screen, padding for spacing*/
 section {
     min-height: 100vh;
-    padding: 10px 20px 20px 50pt;
+    padding: 1rem 2rem 2rem 5rem;
+    overflow-x: hidden;
 }
 
 h3, h4, h5 {
@@ -140,13 +137,13 @@ p, li {
 }
 
 /*about section*/
+
 .about-container {
-    max-width: 35%;
+    max-width: 600px;
     margin: 0 auto;
     text-align: center;
-    padding-top: 8vw;
+    padding-top: 8rem;
 }
-
 .intro-heading {
     font-size: 3rem;
     font-weight: 700;
@@ -229,7 +226,7 @@ p, li {
 }
 
 .timeline__component {
-    margin: 0 20px 20px 20px; /*margin around each component*/
+    margin: 0 2em 2em 2em; /*margin around each component*/
 }
 
 .timeline__component--bg {
@@ -393,4 +390,104 @@ p, li {
 
 .top a:hover{
     transform: translateY(-2px) scale(1.05);
+}
+
+
+
+
+
+
+/*breakpoints*/
+
+@media (min-width: 992px) and (max-width: 1199px) {
+
+    .about-container {
+        max-width: 600px;
+        margin: 0 auto;
+        text-align: center;
+        padding-top: 8rem;
+    }
+
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    
+    .about-container {
+        max-width: 500px;
+        margin: 0 auto;
+        text-align: center;
+        padding-top: 8rem;
+    }
+
+}
+
+@media (max-width: 767px) {
+    
+    html{
+        scroll-padding-top: 0;
+    }
+
+    ul li {
+        margin-bottom: 25px; 
+    }
+
+    section{
+        padding: 1rem 2rem 2rem 2rem;
+    }
+
+    .nav-container{
+        display:None;
+    }
+    .about-container {
+        max-width: 300px;
+        margin: 0 auto;
+        text-align: left;
+        padding-top: 30px;
+    }
+
+    .intro-heading .typing {
+        display: block; 
+        margin-top: 0.5rem;
+        min-height: 1.2em;   
+    }
+
+    .timeline {
+        grid-template-columns: 1fr; 
+    }
+
+    .timeline__middle {
+        display: none; /
+    }
+
+    .timeline__component {
+        margin: 0 0 2em 0;
+    }
+
+    .timeline__component--bg {
+        padding: 1em; 
+    }
+
+    .timeline__date--right {
+        text-align: left;
+    }
+    
+    .timeline__component:nth-child(4) { order: 3; }
+    .timeline__component:nth-child(6) { order: 4; } 
+    .timeline__component:nth-child(9) { order: 6; }
+
+    .cert {
+        grid-template-columns: 1fr;
+        max-width: 100%;
+        margin: 0 auto;
+    }
+
+    .cert-img img {
+        max-width: 250px;
+    }
+
+    #Certifications{
+        padding-bottom: 100px;
+    }
+
+    
 }
