--- a/style.css
+++ b/style.css
@@ -450,10 +450,17 @@ p, li {
         text-align: left;
     }
     
-    .timeline__component:nth-child(4) { order: 3; }
-    .timeline__component:nth-child(6) { order: 4; } 
-    .timeline__component:nth-child(9) { order: 6; }
+    .timeline__component:nth-child(3) { order: 1; }   
+    .timeline__component:nth-child(1) { order: 2; }   
 
+    .timeline__component:nth-child(4) { order: 3; }   
+    .timeline__component:nth-child(6) { order: 4; }   
+
+    .timeline__component:nth-child(9) { order: 5; }   
+    .timeline__component:nth-child(7) { order: 6; }   
+
+    .timeline__component:nth-child(10) { order: 7; }  
+    .timeline__component:nth-child(12) { order: 8; }  
 }
 
 @media (max-width: 767px) {
@@ -495,7 +502,7 @@ p, li {
     }
 
     .timeline__middle {
-        display: none; /
+        display: none; 
     }
 
     .timeline__component {
@@ -510,9 +517,18 @@ p, li {
         text-align: left;
     }
     
-    .timeline__component:nth-child(4) { order: 3; }
-    .timeline__component:nth-child(6) { order: 4; } 
-    .timeline__component:nth-child(9) { order: 6; }
+    .timeline__component:nth-child(3) { order: 1; }   
+    .timeline__component:nth-child(1) { order: 2; }   
+
+    .timeline__component:nth-child(4) { order: 3; }   
+    .timeline__component:nth-child(6) { order: 4; }   
+
+    .timeline__component:nth-child(9) { order: 5; }   
+    .timeline__component:nth-child(7) { order: 6; }   
+
+    .timeline__component:nth-child(10) { order: 7; }  
+    .timeline__component:nth-child(12) { order: 8; }  
+
 
     .cert {
         grid-template-columns: 1fr;
